--- a/index.html
+++ b/index.html
@@ -26,15 +26,22 @@
   </section>
 
   <header>
+
       <section class="header-container">
   <!-- "header_img.jpg" -->
-      <img src="assets/header_img.jpg" alt="header">
+        <div class ="header-image">;
+            <img src="assets/header_img.jpg" alt="header"> 
+        </div;>
+        <div class = "header-text">
+            <h1>Peri Bacaları Tanıtımı</h1>
 
-      <h1>Peri Bacaları Tanıtımı</h1>
-
-      <p>Gelin ve Nevşehir'in gizli güzelliklerini keşfedin. <br>
-        Sürekli açık. Ziyaret için rezervasyona gerek yoktur.</p>
+            <p>Gelin ve Nevşehir'in gizli güzelliklerini keşfedin. <br><br>
+            Sürekli açık. Ziyaret için rezervasyona gerek yoktur.</p>
+        </div> 
+        <div class="header-dummy"></div>
       </section>
+     
+   
   </header>  
 
   <section class = "ana-metin">
