--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section class="header-container">
   <!-- "header_img.jpg" -->
-        <div class ="header-image">;
+        <div class ="header-image">
             <img src="assets/header_img.jpg" alt="header"> 
         </div;>
         <div class = "header-text">
